--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -36,6 +36,8 @@ jobs:
           version: 7
       - name: Install dependencies
         run: pnpm install
+      - name: (prebuild) fetch data from google sheets and generate image colors
+        run: pnpm run prebuild
       - name: build
         run: pnpm run build
         env:
