Row styles are generated during build

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "fetch-daily-resources": "tsx src/scripts/fetch-daily-resources.ts",
     "get-image-colors": "tsx src/scripts/get-image-colors.ts",
-    "prebuild": "pnpm fetch-daily-resources && pnpm get-image-colors",
+    "create-row-styles": "tsx src/scripts/create-row-styles.ts",
+    "prebuild": "pnpm fetch-daily-resources && pnpm get-image-colors && pnpm create-row-styles",
     "build": "tsc -b && vite build",
     "cleanup": "ts-unused-exports ./tsconfig.app.json",
     "lint": "eslint .",
