--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
   "dependencies": {
     "dayjs": "^1.11.13",
     "export-to-csv": "^1.4.0",
+    "node-vibrant": "^4.0.3",
     "normalize.css": "^8.0.1",
+    "public-google-sheets-parser": "^1.5.4",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-tooltip": "^5.28.1",
+    "zod": "^4.0.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
-    "@types/get-image-colors": "^4.0.5",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
@@ -37,15 +39,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.0.0",
-    "node-vibrant": "^4.0.3",
-    "public-google-sheets-parser": "^1.5.4",
     "sass": "^1.87.0",
     "ts-unused-exports": "^11.0.1",
     "tsx": "^4.19.4",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.31.1",
     "vite": "^6.3.4",
-    "vitest": "^3.2.4",
-    "zod": "^3.24.3"
+    "vitest": "^3.2.4"
   }
 }
