--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-tooltip": "^5.28.1",
     "zod": "^4.0.5",
     "zustand": "^5.0.4"
