--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -36,12 +36,14 @@ jobs:
           version: 7
       - name: Install dependencies
         run: pnpm install
-      - name: build
-        # This also runs the prebuild scripts to download
-        # the google sheet data and generate the colors
-        run: pnpm run build
+      - name: (prebuild) fetch data from google sheets and generate image colors
+        run: pnpm run prebuild
         env:
           GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID }}
+          WORKDIR: "/home/runner/work/arknights-pulls-calculator/arknights-pulls-calculator/"
+      - name: build
+        run: pnpm run build
+        env:
           VITE_ASSETS_BASE_URL: https://imivi.github.io/arknights-pulls-calculator/
           VITE_UMAMI_SCRIPT: https://analytics.imivi.dev/script.js
           VITE_UMAMI_WEBSITE_ID: 01d71fe3-df58-4797-a2c3-72e39c5138e4
