--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "fetch-daily-resources": "tsx src/scripts/fetch-daily-resources.ts",
     "get-image-colors": "tsx src/scripts/get-image-colors.ts",
     "create-row-styles": "tsx src/scripts/create-row-styles.ts",
-    "prebuild": "pnpm fetch-daily-resources && pnpm get-image-colors && pnpm create-row-styles",
+    "check-data": "tsx src/scripts/check-daily-resources.ts",
+    "prebuild": "pnpm fetch-daily-resources && pnpm check-data && pnpm get-image-colors && pnpm create-row-styles",
     "build": "tsc -b && vite build",
     "cleanup": "ts-unused-exports ./tsconfig.app.json",
     "lint": "eslint .",
